--- a/AdvancedApexSpecialistSuperbadge/force-app/main/default/classes/OrderTests.cls
+++ b/AdvancedApexSpecialistSuperbadge/force-app/main/default/classes/OrderTests.cls
@@ -20,4 +20,25 @@ private class OrderTests {
         TestDataFactory.VerifyQuantityOrdered(p, updatedp, constants.DEFAULT_ROWS);
         Test.stopTest();
     }
+
+    @isTest static void OrderExtension_UnitTest() {
+        PageReference pageRef = Page.OrderEdit;
+        Test.setCurrentPage(pageRef);
+        Order o = [SELECT Id, Status FROM Order LIMIT 1];
+        ApexPages.StandardController stdcontroller = new ApexPages.StandardController(o);
+        OrderExtension ext = new OrderExtension(stdcontroller);
+        System.assertEquals(1, ext.orderItemList.size());
+        ext.OnFieldChange();
+        ext.SelectFamily();
+        ext.Save();
+        ext.First();
+        ext.Next();
+        ext.Previous();
+        ext.Last();
+        ext.GetHasPrevious();
+        ext.GetHasNext();
+        ext.GetTotalPages();
+        ext.GetPageNumber();
+        List<SelectOption> options = ext.GetFamilyOptions();
+    }
 }
